{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 57,
  "lineage": "a83de81d-a8af-a9a4-6e02-b09c674fdfb5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "django_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970850578809:internet-gateway/igw-057368d512a396844",
            "id": "igw-057368d512a396844",
            "owner_id": "970850578809",
            "tags": {
              "Name": "django-devops-igw"
            },
            "tags_all": {
              "Name": "django-devops-igw"
            },
            "vpc_id": "vpc-05f49b3259b29250b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "django_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970850578809:route-table/rtb-004f81633b72b7cc1",
            "id": "rtb-004f81633b72b7cc1",
            "owner_id": "970850578809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057368d512a396844",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "django-devops-rt"
            },
            "tags_all": {
              "Name": "django-devops-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f49b3259b29250b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.django_igw",
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "django_rta_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080c7d3c5cb92b57b",
            "route_table_id": "rtb-004f81633b72b7cc1",
            "subnet_id": "subnet-062faf0ef5be82d38"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.django_igw",
            "aws_route_table.django_rt",
            "aws_subnet.django_subnet_1",
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "django_rta_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042b2c6f543fecdff",
            "route_table_id": "rtb-004f81633b72b7cc1",
            "subnet_id": "subnet-09bcb3076892cd0a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.django_igw",
            "aws_route_table.django_rt",
            "aws_subnet.django_subnet_2",
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970850578809:security-group/sg-0b38c9e8d6d3e88ff",
            "description": "Allow HTTP/HTTPS access to EB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b38c9e8d6d3e88ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "django-eb-sg",
            "name_prefix": "",
            "owner_id": "970850578809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "django-eb-sg"
            },
            "tags_all": {
              "Name": "django-eb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f49b3259b29250b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970850578809:security-group/sg-0fb0546c7b550d4dd",
            "description": "Allow PostgreSQL access from EB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb0546c7b550d4dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "80.233.62.248/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b38c9e8d6d3e88ff"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "django-rds-sg",
            "name_prefix": "",
            "owner_id": "970850578809",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "django-rds-sg"
            },
            "tags_all": {
              "Name": "django-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f49b3259b29250b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eb_sg",
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "django_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970850578809:subnet/subnet-062faf0ef5be82d38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062faf0ef5be82d38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970850578809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "django-devops-subnet-1a"
            },
            "tags_all": {
              "Name": "django-devops-subnet-1a"
            },
            "vpc_id": "vpc-05f49b3259b29250b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "django_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970850578809:subnet/subnet-09bcb3076892cd0a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bcb3076892cd0a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970850578809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "django-devops-subnet-2b"
            },
            "tags_all": {
              "Name": "django-devops-subnet-2b"
            },
            "vpc_id": "vpc-05f49b3259b29250b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.django_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "django_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:970850578809:vpc/vpc-05f49b3259b29250b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06bf672aa1c20a60d",
            "default_route_table_id": "rtb-0aa5b805c7699f559",
            "default_security_group_id": "sg-053eef92d5be52b41",
            "dhcp_options_id": "dopt-0222d83ac666ed52c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05f49b3259b29250b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa5b805c7699f559",
            "owner_id": "970850578809",
            "tags": {
              "Name": "django-devops-vpc"
            },
            "tags_all": {
              "Name": "django-devops-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}